k8s/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: wishlist-service
  namespace: default
  labels:
    app: wishlist-service
spec:
  selector:
    app: wishlist-service
  type: ClusterIP
  ports:
    - name: http
      port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wishlist-service
spec:
  selector:
    matchLabels:
      app: wishlist-service
  replicas: 1
  template:
    metadata:
      labels:
        app: wishlist-service
    spec:
      containers:
        - name: wishlist-service
          image: henriquementz/wishlist:latest
          ports:
            - containerPort: 8080
